# claude-engine

./: .gitignore  .gitmodules  BUILD_SUCCESS.md  CMakeLists.txt  QUICKSTART.md  README.md  build.ps1  generate_glad.ps1  imgui.ini  run.ps1  setup.ps1
Editor/: CMakeLists.txt
Editor/include/Panels/: ViewportPanel.h
Editor/include/UI/: IconManager.h
Editor/src/: EditorApp.cpp
Editor/src/Panels/: EditorPanels.cpp  EditorPanels.h  ViewportPanel.cpp
Editor/src/UI/: IconManager.cpp
Engine/: CMakeLists.txt
Engine/include/ClaudeEngine/: ClaudeEngine.h
Engine/include/ClaudeEngine/Core/: Application.h  Core.h  Log.h
Engine/include/ClaudeEngine/Events/: ApplicationEvent.h  Event.h
Engine/include/ClaudeEngine/Platform/: Window.h  WindowsWindow.h
Engine/include/ClaudeEngine/Platform/OpenGL/: OpenGLBuffer.h  OpenGLFramebuffer.h  OpenGLRenderAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.h
Engine/include/ClaudeEngine/Renderer/: Buffer.h  Camera.h  EditorCamera.h  Framebuffer.h  Material.h  Mesh.h  MeshPrimitives.h  Model.h  ModelLoader.h  RenderAPI.h  RenderCommand.h  Renderer.h  Renderer3D.h  Shader.h  Texture.h  VertexArray.h
Engine/include/ClaudeEngine/Scene/: Components.h  Entity.h  Scene.h  SceneSerializer.h
Engine/include/ClaudeEngine/UI/: EditorTheme.h
Engine/src/Core/: Application.cpp  Log.cpp
Engine/src/Platform/: Window.cpp  WindowsWindow.cpp
Engine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLFramebuffer.cpp  OpenGLRenderAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
Engine/src/Renderer/: Buffer.cpp  Camera.cpp  EditorCamera.cpp  Framebuffer.cpp  Material.cpp  Mesh.cpp  MeshPrimitives.cpp  Model.cpp  ModelLoader.cpp  RenderAPI.cpp  RenderCommand.cpp  Renderer.cpp  Renderer3D.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
Engine/src/Scene/: Entity.cpp  Scene.cpp  SceneSerializer.cpp
Engine/src/UI/: EditorTheme.cpp
assets/shaders/: BasicColor.glsl  BasicColor.vert.glsl  Grid.frag  Grid.frag.glsl  Grid.glsl  Grid.vert  Grid.vert.glsl  PBR_RayTracing.glsl
dependencies/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
